# wxFreeDesktopIconTheme

./: CMakeLists.txt  README  THIRD_PARTY
src/: dvcard.cpp  dvcard.h  fdicontheme.cpp  fdicontheme.h  main.cpp
